--- a/psu-phd-graduates-firstjobs.Rmd
+++ b/psu-phd-graduates-firstjobs.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Where Do Penn State Statistics PhD Students Go After They Graduate?"
+title: "Where Do Penn State Statistics PhD Students Go After They Graduate (2022 Update)?"
 author: "Alex Zhao"
-date: "6/13/2019"
-output: html_document
+date: "2022-10-11"
+output: md_document
 ---
 
 ```{r setup, include=FALSE}
@@ -11,33 +11,49 @@ library(dplyr)
 library(ggplot2)
 ```
 
-As a statistics PhD student, I am often asked what I intend to do after I graduate. After I give my answer, the next natural question is "where do PhD students from your department usually go after they graduate?" This question also comes up every year when prospective students visit our department.
+*A version of this article was originally written in 2019. Now that I've graduated and as part of moving my website to Hashnode I decided to revisit this analysis with data through Summer 2022.*
 
-In the past, my answer to that second question was that 1/3rd of our graduates went to academia, 1/3rd went into industry, and roughly 1/3rd went into what could loosely be defined as "other," which are jobs that are not quite academia but also not industry either, such as those at a national lab, a government agency, or a think tank like the RAND Corporation. This was more of a guess than anything based on real data, mostly because while we do have a webpage with where our alumni go after they graduate (http://stat.psu.edu/alumni), that information is not in a format that's easily analyzable.
+When I was a statistics PhD student, I was often asked what I intended to do after I graduate. After I'd give my answer, the next natural question was "where do PhD students from your department usually go after they graduate?" This question also came up every year when prospective students visited our department.
+
+In the past, my answer to that second question was that 1/3rd of our graduates went to academia, 1/3rd went into industry, and roughly 1/3rd went into what could loosely be defined as "other," which are jobs that are not quite academia but also not industry either, such as those at a national lab, a government agency, or a think tank like the RAND Corporation. This was more of a guess than anything based on real data, mostly because while we do have a webpage with where our alumni go after they graduate (https://science.psu.edu/stat/alumni/members), that information is not in a format that's easily analyzable.
 
 Nonetheless, I do actually want the answer to this question. Part of this is so that I can actually give a good answer to prospective students (or other people who are curious), and part of it is just to satisfy my own curiosity. I recently spent some time organizing the available data into a more manageable CSV file so that I can finally answer the question of where Penn State statistics PhD graduates go.
 
 ### The Data
-All of the data was taken off of the website link above for graduates from 2010 until 2018. I chose to cutoff at 2018 because 2019 graduate information isn't yet fully available and because data before 2010 seems more incomplete. Additionally, data from more than 9 years ago might not be so representative of recent trends in our department. Overall, this meant that I had information on 94 graduates and the first jobs and institutions they went to.
+All of the data was taken off of the website link above for graduates from 2010 until 2022. Previously, I had chosen 2010 as a cutoff because data from before 2010 seemed more incomplete, and I thought that data from before 2010 wouldn't be representative of recent trends in the department. Of course, now we have more recent data, but since I already collected the previous data, I'm keeping it. 
 
-I will note as a major caveat that this information is self reported. While I think the information provided is accurate, it is possible that there is some kind of bias with who actually fills out this form. All of the data as well as the RMarkdown file (with the R code) can be found here: https://github.com/yazhao/PSUPhdGrads
+
+### Limitations of the Data
+There are a few limitations from this dataset that are worth noting:
+
+- This data only includes up to people who would graduate in the 2022 calendar year: some individuals might defend their dissertation in the Fall 2022 semester, but as of this publication date nobody has announced or defended yet this semester, and anyone defending after today will only be eligible to graduate in Spring of 2023. 
+- The information about first jobs is self-reported by the people graduating. In the case of some individuals not publicly listed, I have used personal recollection and some searches to find their first post-graduation job.
+- Only people who graduated with a PhD are included in this dataset. People sometimes withdrew or graduated with a Master's for a variety of reasons, but this analysis is focused on PhD graduates due to them making up the overwhelming number of people who graduate from the PhD program.
+- A couple of PhD graduates were excluded from the analysis because no job information was provided nor could be found online.
+
+
+Overall, this meant that I had information on 157 graduates and the first jobs and institutions they went to.
+
+All of the data as well as the RMarkdown file (with the R code) can be found here: https://github.com/yazhao/PSUPhdGrads
 
 ### Definitions
 
 For the purposes of this analysis, I looked only at the first job taken by graduates right after they got their PhD. It's entirely possible that many of these people switched career tracks, but tracking down that full information proved to be difficult. Additionally, I'm mostly interested in where people are *first* placed, not necessarily where they ultimately end up. I wanted to see what the immediate next step of a Penn State statistics PhD would be. The three categories of jobs were:
 
-**Academia**: This includes any job working at an academic institution like a university. It also included any first job where the title was postdoc. This was an overly broad definition, and so I included people who weren't strictly on a tenure-track assistant professorship, but rather anyone who got a job in an academic setting.
+**Academia**: This includes any job working at an academic institution like a university. It also included any first job where the title would imply postdoc (ie "postdoctoral researcher"). This was an overly broad definition, and so I included people who weren't strictly on a tenure-track assistant professorship, but rather anyone who got a job in an academic setting.
 
 **Industry**: Anyone who went to work at a private company was put into this category.
 
-**Other*: This included jobs and institutions that weren't necessarily academia but also clearly were not industry. In this category included working at a government agency, a national lab, and non-profit think tanks.
+**Other**: This included jobs and institutions that weren't necessarily academia but also clearly were not industry. In this category included working at a government agency, a national lab, central banks, and non-profit think tanks.
 
 In the cases where I didn't have a first job title, I used the first job location to define the job type.
 
 ### Summary
 
 ```{r summary, echo=FALSE}
-data = read.csv(file = "https://raw.githubusercontent.com/yazhao/PSUPhdGrads/master/psustatphdalums.csv", header = TRUE)
+data_load = read.csv(file = "https://raw.githubusercontent.com/yazhao/PSUPhdGrads/master/psustatphdalums.csv", header = TRUE)
+
+data = data_load[data_load$Type != "N/A",]
 
 round((table(data$Type)/nrow(data))*100, digits = 2)
 
@@ -45,10 +61,10 @@ ggplot2::ggplot(data = data, aes(x = factor(1), fill = Type)) +
   ggplot2::geom_bar(width = 1) + 
   ggplot2::coord_polar(theta = "y") + 
   ggplot2::theme_void() + 
-  ggplot2::ggtitle("Penn State Statistics PhD Graduates, 2010-2018")
+  ggplot2::ggtitle("Penn State Statistics PhD Graduates, 2010-2022")
 ```
 
-Based on the past 9 years worth of data, it seems that by and large our PhD graduates go into academia. Over 60 percent of our graduates end up in academia with their first job, a little over 30 percent go into private industry, while only about 7.5 percent go into that Other category. It seems that my initial impressions (and the answer I've been giving people) were wrong. And while these numbers might be inflated due to my broad definition of an academic job, it seems that our department largely prepares people for academia.
+Based on the past 13 years worth of data, it seems that the majority of our PhD graduates go into academia. Over 50 percent of our graduates end up in academia with their first job, a little under 40 percent go into private industry, while only about 7.5 percent go into that Other category. It seems that my initial impressions (and the answer I've been giving people) were wrong. And while these numbers might be inflated due to my broad definition of an academic job, it seems that our department largely prepares people for academia.
 
 ### Trends
 
@@ -61,7 +77,8 @@ summed = dat[,.N, by = c("Year","Type")]
 ggplot2::ggplot(data = summed, aes(x = Year, y = N, colour = Type)) +
   ggplot2::geom_line() +
   ggplot2::ylab("Graduates") +
-  ggplot2::ggtitle("Graduates by Type of First Job, 2010-2018")
+  ggplot2::scale_x_continuous(breaks = 2010:2022) +
+  ggplot2::ggtitle("Graduates by Type of First Job, 2010-2022")
 
 sumperc = summed[,.(total = sum(N)), by = "Year"]
 percentage = dplyr::left_join(x = summed, y = sumperc, by = "Year")
@@ -70,14 +87,17 @@ percentage$percent = round(percentage$N/percentage$total * 100, 2)
 ggplot2::ggplot(data = percentage, aes(x = Year, y = percent, colour = Type)) +
   ggplot2::geom_line() +
   ggplot2::ylab("% of Graduates") +
-  ggplot2::ggtitle("Graduates by Type of First Job As Percentage, 2010-2018")
+  ggplot2::scale_x_continuous(breaks = 2010:2022) +
+  ggplot2::ggtitle("Graduates by Type of First Job As Percentage, 2010-2022")
 ```
 
-It seems like there has definitely been changes in the category compositions over time. Initially, basically all graduates went into academia. However, around 2013, that trend started shifting, as a more even number of students went into industry. That trend reversed in 2016, though that change was mostly because of people going into the Other category. Last year was the first one in recent memory where more people went into industry than academia.
+It seems like there has definitely been changes in the category compositions over time. Initially, basically all graduates went into academia. However, around 2013, that trend started shifting, as more students went into industry. That trend reversed in 2016, though that change was mostly because of people going into the Other category. By 2018, it was a roughly even split between academia and industry positions, and since 2021 the number of people going into industry jobs has exceeded those going into academia. People going into "other" jobs has all but fallen off in that timeframe.
 
 ### Conclusion
-My intuition that our department was roughly evenly split among the three types of jobs for graduates was obviously incorrect. Based on historical data, that split is closer to 60/30/10 for academia/industry/other. In recent years, however, that trend has been changing. I think it's fair to say that roughly 55-65 percent of our department's graduates go into academia, with the balance (35-45 percent) going into industry or some other type of job. This gives a much different picture of my department than I initially believed, one that (for obvious reasons) is more focused on training people for academia.
+My intuition that the department was roughly evenly split among the three types of jobs for graduates was obviously incorrect. Most of my mistake was in overestimating the share of people going into research positions in the Other category, possibly partly due to the people I knew when I was starting in the program. Based on historical data, the academic/industry/other split is approximately 50/40/10.  In recent years, however, that trend has been changing, and post-2020 it's been more 50/50 academia/industry, with "other" jobs falling off. Moreover, it looks like after 2020 the trend has been towards a 60/40 split between industry and academic jobs, respectively. 
+
+This updated analysis also further solidifies the trend that I initially saw in 2018: while the initial percent of people going to academia recovered from the one-time 2018 dip, it's now the case that industry jobs are more popular than academic ones for students from Penn State's statistics department.
 
 Of course, this kind of analysis has a lot of caveats. It's possible that people going into industry might not be as interested in filling out this information, or people going into jobs that they don't particularly like. It's also possible that a lot of the people who first get an academic job (notably, many of those who are lecturers or postdocs) might end up switching tracks and going into industry or some other type of job, while the reverse trend might be much less common. 
 
-Nonetheless, this information does indicate that Penn State's statistics department does primarily focus on putting students into academic jobs. In any case, at least now I have a more accurate answer to the question of "Where do Penn State statistics PhD students go after they graduate?" the next time somebody asks.
+Nonetheless, this information does seem to capture a trend: while in the past most graduates first went into academic jobs, it seems like more and more statistics PhD students at Penn State are willing to jump into industry first. In any case, at least now I have a more accurate answer to the question of "Where do Penn State statistics PhD students go after they graduate?" the next time somebody asks.
